--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dserrano25/google-search-mcp-test",
+  "name": "google-search-mcp-test",
   "version": "1.0.5",
   "description": "MCP server for Google search and webpage analysis",
   "type": "module",
